# geoconvert-rs

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  latlon.rs  lib.rs  main.rs  mgrs.rs  utility.rs  utm.rs
src/coords/: latlon.rs  mgrs.rs  utm.rs
src/projections/: polar_stereographic.rs  transverse_mercator.rs
tests/: accuracy.rs
