[package]
name = "geoconvert"
description = "A lightweight library to convert between geographic coordinate systems"
authors = ["Nicholas Crothers <ncrothers523@gmail.com>"]
license = "MIT"
repository = "https://github.com/ncrothers/geoconvert-rs"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num = "0.4.1"
ryu = "1.0.16"
serde = { version = "1.0.192", features = ["derive"], optional = true }
thiserror = "1.0.50"

[features]
serde = ["dep:serde"]